<resources>
    <string name="app_name">Taller</string>
    <string name="mensaje_bienvenida">ParkNow System </string>
    <string name="mensaje_inicio">La aventura está por iniciar ,\n por favor inicia sesión</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="tv_descripcion_bienvenida">Inicia una nueva aventura con ParkNow y descubre una nueva forma de ver el mundo</string>
    <string name="comienza">Comienza</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="registrate">No tienes cuenta? Regístrate</string>
    <string name="nombre_estudiante">Jhon Jairo Martinez</string>
    <string name="registarte">Registrate</string>
    <string name="recupera_tu_contrase">Recupera Tu Contrasena</string>
    <string name="ingresar_con_google">ingresar con google</string>
    <string name="tipo_letra_botones">tiro_devanagari_hindi</string>
    <string name="no_tienes_cuenta">No tienes cuenta? Regístrate</string>
    <string name="registro">REGISTRO</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="re_contrase_a">Re-Contraseña</string>
    <string name="mi_tienda_main">Mi Tienda</string>
    <string name="nombre_catalogo">Catálogo</string>
    <string name="bienvenido_a_la_tienda">Bienvenido a la tienda</string>
    <string name="explora_nuestros_productos">Explora nuestros productos</string>
    <string name="promociones">Promociones</string>
    <string name="producto_3">Producto 3</string>
    <string name="producto_2">Producto 2</string>
    <string name="producto_1">Producto 1</string>
    <string name="cat_logo">Catálogo</string>
    <string name="gesti_n_de_usuarios">Gestión de usuarios</string>
    <string name="gesti_n_de_productos">Gestión de productos</string>
    <string name="panel_admin">Panel Admin</string>
    <string name="tu_carrito_est_vac_o">Tu carrito está vacío</string>
    <string name="perfil">Perfil</string>
    <string name="jhon_martinez_gmail_com">jhon.martinez@gmail.com</string>
    <string name="agregar_producto">Agregar</string>
    <string name="productos_destacados">Productos Destacados!!</string>
    <string name="cerrar_sesion">cerrar_sesion</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="inicio_drawer">Inicio</string>
    <string name="productos_drawer">Productos</string>
    <string name="perfil_drawer">Perfil</string>
    <string name="admin_drawer">Admin</string>
    <string name="cerrar_sesion_drawer">Cerrar sesión</string>
    <string name="home">Home</string>
    <string name="catalogo">Catalogo</string>
    <string name="carrito">Carrito</string>
    <string name="admin">Admin</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="foto_de_perfil">foto_de_perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="correos">Correo</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="rol">Rol</string>
    <string name="correo_email_com">correo@email.com</string>
</resources>