<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_view"/>

    <item
        android:id="@+id/nav_catalogo"
        android:title="@string/catalogo"
        android:icon="@android:drawable/ic_menu_agenda"/>

    <item
        android:id="@+id/nav_carrito"
        android:title="@string/carrito"
        android:icon="@android:drawable/ic_menu_add"/>

    <item
        android:id="@+id/nav_perfil"
        android:title="@string/perfil"
        android:icon="@android:drawable/ic_menu_myplaces"/>

    <item
        android:id="@+id/nav_admin"
        android:title="@string/admin"
        android:icon="@android:drawable/ic_menu_manage"/>

</menu>