<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/registro"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/Blanco"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/nombres"
            android:hint="@string/nombres"
            android:background="@drawable/style_edit_text"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/apellidos"
            android:hint="@string/apellidos"
            android:background="@drawable/style_edit_text"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/correo"
            android:hint="@string/correo_electronico"
            android:background="@drawable/style_edit_text"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/style_edit_text"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/repassword"
            android:hint="@string/re_contrase_a"
            android:inputType="textPassword"
            android:background="@drawable/style_edit_text"
            android:padding="18dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <CheckBox
            android:id="@+id/terminos"
            android:text="@string/acepto_los_t_rminos_y_condiciones"
            android:textColor="@color/Blanco"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Blanco"
            android:text="@string/registrarse"
            android:textColor="@color/Negro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ir_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ya_tienes_cuenta"
            android:textColor="@color/Blanco"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>