<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="144dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/Nombre_proyecto"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:text="@string/mensaje_bienvenida"
        android:textColor="@color/Blanco"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/descripcion_inicio"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mensaje_inicio"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/Nombre_proyecto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/iconos"
        android:layout_width="173dp"
        android:layout_height="204dp"
        android:src="@mipmap/icono_foreground"
        app:layout_constraintTop_toBottomOf="@id/descripcion_inicio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/correo"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/iconos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/Blanco"
        android:text="@string/ingresar"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/recuperar_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="108dp"
        android:text="@string/recupera_tu_contrase"
        android:textColor="@color/Negro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ingresar" />

    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/style_btn_google"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recuperar_contrasena">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/icono_google_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/ingresar_con_google"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

    <TextView
        android:id="@+id/in_huella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Ingresar con huella"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_registro" />

</androidx.constraintlayout.widget.ConstraintLayout>