<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".activities.InformacionActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="268dp"
        android:layout_height="204dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:text="@string/mensaje_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/descripcion_bienvenida"
        android:layout_width="305dp"
        android:layout_height="83dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_descripcion_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btn_Comienza"
        android:layout_width="289dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/Blanco"
        android:text="@string/comienza"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        app:strokeColor="@color/border"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tv_registar"
        android:layout_width="174dp"
        android:layout_height="36dp"
        android:text="@string/registarte"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />
</androidx.constraintlayout.widget.ConstraintLayout>